[gd_scene load_steps=2 format=3 uid="uid://c6gaxbudroo0"]

[ext_resource type="Script" path="res://isogrid.gd" id="1_nm1v2"]

[node name="isogrid" type="Node2D"]
script = ExtResource("1_nm1v2")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="CanvasGroup" type="CanvasGroup" parent="CanvasLayer"]

[node name="Button" type="Button" parent="CanvasLayer/CanvasGroup"]
offset_left = 171.0
offset_right = 321.0
offset_bottom = 100.0
theme_override_font_sizes/font_size = 30
text = "Reset"

[node name="LineEdit" type="LineEdit" parent="CanvasLayer/CanvasGroup"]
offset_right = 150.0
offset_bottom = 100.0
theme_override_font_sizes/font_size = 30
placeholder_text = "00"
alignment = 1
context_menu_enabled = false

[node name="Button2" type="Button" parent="CanvasLayer/CanvasGroup"]
offset_left = 171.0
offset_top = 119.0
offset_right = 321.0
offset_bottom = 219.0
theme_override_font_sizes/font_size = 30
text = "Reset"

[node name="LineEdit2" type="LineEdit" parent="CanvasLayer/CanvasGroup"]
offset_top = 119.0
offset_right = 150.0
offset_bottom = 219.0
theme_override_font_sizes/font_size = 30
placeholder_text = "00"
alignment = 1
context_menu_enabled = false

[node name="LineEdit3" type="LineEdit" parent="CanvasLayer/CanvasGroup"]
offset_left = 608.0
offset_top = 1.0
offset_right = 758.0
offset_bottom = 101.0
theme_override_font_sizes/font_size = 30
placeholder_text = "00"
alignment = 1
context_menu_enabled = false

[connection signal="text_submitted" from="CanvasLayer/CanvasGroup/LineEdit" to="." method="_on_line_edit_text_submitted"]
[connection signal="text_submitted" from="CanvasLayer/CanvasGroup/LineEdit2" to="." method="_on_line_edit_2_text_submitted"]
[connection signal="text_submitted" from="CanvasLayer/CanvasGroup/LineEdit3" to="." method="_on_line_edit_3_text_submitted"]
